--- a/neat.yaml
+++ b/neat.yaml
@@ -1,17 +1,12 @@
 ---
 embeddings:
   model: "SkipGram"  # or CBOW
+  graph:
+    edge_file:  tests/resources/test_graphs/edges.tsv
+    node_file:  tests/resources/test_graphs/nodes.tsv
   a:
     a1:
       a2:
-        a3: 0
-        b3: 0
-        c3: 0
-      b2:
-        a3: 0
-        b3: 0
-        c3: 0
-      c2:
         a3: 0
         b3: 0
         c3: 0
