--- a/neat.yaml
+++ b/neat.yaml
@@ -2,6 +2,52 @@
 name: ""
 description: ""
 output_directory: output_data
+
+graph_data:
+  graph:
+    directed: False
+    verbose: True
+    skip_self_loops: False
+    nodes_column: 'id'
+    node_types_column: 'category'
+    default_node_type: 'biolink:NamedThing'
+    ignore_duplicated_nodes: True
+    # other parameters:
+    # nodes_column_number: int = None
+    # node_types_column_number: int = None,
+    # node_header: optional str
+    # node_rows_to_skip: int = 0
+    # node_separator: str = "\t"
+    sources_column: 'subject'
+    destinations_column: 'object'
+    edge_types_column: 'weight'  # fix this
+    default_edge_type: 'biolink:related_to'
+    ignore_duplicated_edges: True
+    node_path: tests/resources/test_graphs/nodes.tsv
+    edge_path: tests/resources/test_graphs/edges.tsv
+    # edge_header: str
+    # edge_rows_to_skip: int = 0,
+    # sources_column_number: int = 0
+    # destinations_column_number: int = 1
+    # edge_types_column_number: int = None
+    # edge_separator: str = "\t"
+    ### weight stuff
+    weights_column: 'weight'
+    default_weight: 1
+    # weights_column_number: int = None
+
+  #
+  # classifier-specific graphs:
+  #
+  # (when making a classifier, positive training graph is assumed to be 'graph' above)
+  pos_validation_graph:
+    node_path: tests/resources/test_graphs/nodes.tsv
+    edge_path: tests/resources/test_graphs/edges.tsv
+  neg_training_graph:
+    edge_path: tests/resources/test_graphs/edges.tsv
+  neg_validation_graph:
+    edge_path: tests/resources/test_graphs/edges.tsv
+
 embeddings:
   resume: True
   embedding_file_name: SkipGram_80_20_kg_covid_19_20201001_training_test_epoch_500_delta_0.0001_embedding.npy
@@ -25,47 +71,9 @@ embeddings:
       restore_best_weights: True
     optimizer:  # hard-coded to Nadam for now
       learning_rate: 0.1
-  graph:
-    directed: False
-    verbose: True
-    skip_self_loops: False
-    nodes_column: 'id'
-    node_types_column: 'category'
-    default_node_type: 'biolink:NamedThing'
-    ignore_duplicated_nodes: True
-    # other parameters:
-    # nodes_column_number: int = None
-    # node_types_column_number: int = None,
-    # node_header: optional str
-    # node_rows_to_skip: int = 0
-    # node_separator: str = "\t"
-    sources_column: 'subject'
-    destinations_column: 'object'
-    edge_types_column: 'weight'  # fix this
-    default_edge_type: 'biolink:related_to'
-    ignore_duplicated_edges: True
-    node_path: tests/resources/test_graphs/nodes.tsv 
-    edge_path: tests/resources/test_graphs/edges.tsv
-    # edge_header: str
-    # edge_rows_to_skip: int = 0,
-    # sources_column_number: int = 0
-    # destinations_column_number: int = 1
-    # edge_types_column_number: int = None
-    # edge_separator: str = "\t"
-    ### weight stuff
-    weights_column: 'weight'
-    default_weight: 1
-    # weights_column_number: int = None
-
-  graph_incl_holdouts:  
-    # this is the entire graph - training plus holdouts. This is optional
-    # and only used for early will stopping. In practice this shorten runtime
-    # properties specific to the validation graph can 
-    # be specified as overrides
-    node_path: tests/resources/test_graphs/nodes.tsv 
-    edge_path: tests/resources/test_graphs/edges.tsv
 
 classifier:
+  - edge_method: average # one of EdgeTransformer.methods: hadamard, average, weightedL1, weightedL2
   - type: neural network
     model:
       type: tensorflow.keras.models.Sequential
@@ -92,11 +100,11 @@ classifier:
         - type: tensorflow.keras.layers.Dense
           parameters:
             neurons: 1
-            activation: sigmoid          
+            activation: sigmoid
     model_compile:
       loss: binary_crossentropy
       optimizer: nadam
-      metrics:  # these can be tensorflow objects or a string that tensorflow understands, e.g. 'accuracy' 
+      metrics:  # these can be tensorflow objects or a string that tensorflow understands, e.g. 'accuracy'
         - type: tensorflow.keras.metrics.AUC
           parameters:
             curve: PR
@@ -135,8 +143,8 @@ classifier:
       parameters:
         n_estimators: 500
         max_depth: 30
-        n_jobs: 8  # cpu count       
-        random_state: 42        
+        n_jobs: 8  # cpu count
+        random_state: 42
   - type: Logistic Regression
     model:
       type: sklearn.linear_model.LogisticRegression
