Various fixes to get classifier fit() call working

--- a/neat.yaml
+++ b/neat.yaml
@@ -130,7 +130,7 @@ classifier:
           callbacks:
             - type: tensorflow.keras.callbacks.EarlyStopping
               parameters:
-                label: val_loss
+                monitor: val_loss
                 patience: 5
                 min_delta: 0.001  # min improvement to be considered progres
             - type: tensorflow.keras.callbacks.ReduceLROnPlateau
