--- a/neat.yaml
+++ b/neat.yaml
@@ -78,6 +78,7 @@ classifier:
   classifiers:  # a list of classifiers to be trained
     - type: neural network
       model:
+        outfile: "model_mlp.h5"
         type: tensorflow.keras.models.Sequential
         layers:
           - type: tensorflow.keras.layers.Input
@@ -136,12 +137,14 @@ classifier:
             - type: tensorflow.keras.callbacks.ReduceLROnPlateau
     - type: Decision Tree
       model:
+        outfile: "model_decision_tree.h5"
         type: sklearn.tree.DecisionTreeClassifier
         parameters:
           max_depth: 30
           random_state: 42
     - type: Random Forest
       model:
+        outfile: "model_random_forest.h5"
         type: sklearn.ensemble.RandomForestClassifier
         parameters:
           n_estimators: 500
@@ -150,6 +153,7 @@ classifier:
           random_state: 42
     - type: Logistic Regression
       model:
+        outfile: "model_lr.h5"
         type: sklearn.linear_model.LogisticRegression
         parameters:
           random_state: 42
