--- a/go.yaml
+++ b/go.yaml
@@ -58,8 +58,8 @@ embeddings:
     tsne_file_name: go_tsne.png
     node_property_for_color: category
     scatter_params:
-      marker: 'o'
-      s: 2
+      marker: '.'
+      s: 1
   embiggen_params:
     epochs: 100 # typically more than this
     seq_params:  # these params are passed to Node2VecSequence()
