--- a/go.yaml
+++ b/go.yaml
@@ -23,8 +23,8 @@ graph_data:
     edge_types_column: 'edge_label'
     default_edge_type: 'biolink:related_to'
     ignore_duplicated_edges: True
-    node_path: input_data/go_nodes.tsv
-    edge_path: input_data/go_edges.tsv
+    node_path: input_data/go_nodes_training.tsv
+    edge_path: input_data/go_edges_training.tsv
     # edge_header: str
     # edge_rows_to_skip: int = 0,
     # sources_column_number: int = 0
@@ -41,12 +41,12 @@ graph_data:
   #
   # (when making a classifier, positive training graph is assumed to be 'graph' above)
   # all params below override those in 'graph' above
-  # pos_validation:
-  #   edge_path: tests/resources/test_graphs/pos_valid_edges.tsv
-  # neg_training:
-  #   edge_path: tests/resources/test_graphs/neg_train_edges.tsv
-  # neg_validation:
-  #   edge_path: tests/resources/test_graphs/neg_train_edges.tsv
+   pos_validation:
+     edge_path: input_data/go_edges_validation.tsv
+   neg_training:
+     edge_path: input_data/go_edges_neg_training.tsv
+   neg_validation:
+     edge_path: input_data/go_edges_neg_validation.tsv
 
 embeddings:
   resume: True
