--- a/go.yaml
+++ b/go.yaml
@@ -23,8 +23,8 @@ graph_data:
     edge_types_column: 'label'
     default_edge_type: 'biolink:related_to'
     ignore_duplicated_edges: True
-    node_path: input_data/go_nodes_training.tsv
-    edge_path: input_data/go_edges_training.tsv
+    node_path: input_data/biolink:subclass_of/go_nodes_training.tsv
+    edge_path: input_data/biolink:subclass_of/go_edges_training.tsv
     # edge_header: str
     # edge_rows_to_skip: int = 0,
     # sources_column_number: int = 0
@@ -42,12 +42,12 @@ graph_data:
   # (when making a classifier, positive training graph is assumed to be 'graph' above)
   # all params below override those in 'graph' above
   pos_validation:
-    edge_path: input_data/go_edges_validation.tsv
+    edge_path: input_data/biolink:subclass_of/go_edges_validation.tsv
   neg_training:
-    edge_path: input_data/go_edges_neg_training.tsv
+    edge_path: input_data/biolink:subclass_of/go_edges_neg_training.tsv
     default_edge_type: 'negative_edge'
   neg_validation:
-    edge_path: input_data/go_edges_neg_validation.tsv
+    edge_path: input_data/biolink:subclass_of/go_edges_neg_validation.tsv
     default_edge_type: 'negative_edge'
 
 embeddings:
