--- a/yaml_ml_instructions/go_plus.yaml
+++ b/yaml_ml_instructions/go_plus.yaml
@@ -79,6 +79,7 @@ embeddings:
       patience: 5
       min_delta: 0.0001
       restore_best_weights: True
+      monitor: loss
     optimizer:  # hard-coded to Nadam for now
       learning_rate: 0.1
 
