--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,12 +29,12 @@ jobs:
       - name: run pytest
         run: |
           coverage erase
-          pytest --cov=kg_covid_19 --cov-report xml:coverage.xml
+          pytest --cov=neat --cov-report xml:coverage.xml
           coverage combine --append || true
           coverage report
           coverage xml
       - name: run mypy
-        run: mypy --strict-optional kg_covid_19
+        run: mypy --strict-optional neat
       - name: run yamllint
         run: yamllint -d relaxed yaml_ml_instructions/*.yaml
       - name: SonarCloud Scan
