--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           pip install validate_version_code
           pip install codacy-coverage
           pip install parameterized
-          pip install git+https://github.com/monarch-initiative/embiggen.git@develop        
+          pip install git+https://github.com/monarch-initiative/embiggen.git@develop -U      
       - name: run pytest
         run: |
           coverage erase
