--- a/tests/resources/test.yaml
+++ b/tests/resources/test.yaml
@@ -70,6 +70,7 @@ embeddings:
       patience: 5
       min_delta: 0.0001
       restore_best_weights: True
+      metric: loss
     optimizer:  # hard-coded to Nadam for now
       learning_rate: 0.1
   bert_params:
