--- a/yaml_ml_instructions/go_plus.yaml
+++ b/yaml_ml_instructions/go_plus.yaml
@@ -85,7 +85,7 @@ embeddings:
 
 
 classifier:
-  edge_method: average # one of EdgeTransformer.methods: hadamard, average, weightedL1, weightedL2
+  edge_method: Average # one of EdgeTransformer.methods: hadamard, average, weightedL1, weightedL2
   classifiers:  # a list of classifiers to be trained
     - type: neural network
       model:
