--- a/yaml_ml_instructions/go_plus.yaml
+++ b/yaml_ml_instructions/go_plus.yaml
@@ -45,10 +45,10 @@ graph_data:
     edge_path: input_data/biolink:subclass_of/go_plus_edges_validation.tsv
   neg_training:
     edge_path: input_data/biolink:subclass_of/go_plus_edges_neg_training.tsv
-    default_edge_type: 'negative_edge'
+    edge_types_column: neg_edge
   neg_validation:
     edge_path: input_data/biolink:subclass_of/go_plus_edges_neg_validation.tsv
-    default_edge_type: 'negative_edge'
+    edge_types_column: neg_edge
 
 embeddings:
   resume: True
