Change file extension of embeddings (npy -> tsv, since these are tsvs now)

--- a/tests/resources/test_graph_embedding_bert_tsne.yaml
+++ b/tests/resources/test_graph_embedding_bert_tsne.yaml
@@ -38,7 +38,7 @@ graph_data:
 
 embeddings:
   resume: True
-  embedding_file_name: test_embeddings.npy
+  embedding_file_name: test_embeddings.tsv
   model_file_name: embedding_model.h5
   use_pos_valid_for_early_stopping: True # if True, must specify pos_validation_graph above
   embiggen_params:
