--- a/tests/resources/test_good_upload_info.yaml
+++ b/tests/resources/test_good_upload_info.yaml
@@ -1,4 +1,5 @@
 ---
+output_directory: tests/resources/test_output_data_dir/
 upload:
   s3_bucket: some_bucket
   s3_bucket_dir: some/remote/directory/
