--- a/tests/resources/test.yaml
+++ b/tests/resources/test.yaml
@@ -41,12 +41,13 @@ graph_data:
   #
   # (when making a classifier, positive training graph is assumed to be 'graph' above)
   # all params below override those in 'graph' above
-  pos_validation:
-    edge_path: tests/resources/test_graphs/pos_valid_edges.tsv
-  neg_training:
-    edge_path: tests/resources/test_graphs/neg_train_edges.tsv
-  neg_validation:
-    edge_path: tests/resources/test_graphs/neg_valid_edges.tsv
+  existing_holdouts:  # this OR make_holdouts (not both)
+    pos_validation:
+      edge_path: tests/resources/test_graphs/pos_valid_edges.tsv
+    neg_training:
+      edge_path: tests/resources/test_graphs/neg_train_edges.tsv
+    neg_validation:
+      edge_path: tests/resources/test_graphs/neg_valid_edges.tsv
 
 embeddings:
   resume: True
