--- a/tests/resources/test_holdouts.yaml
+++ b/tests/resources/test_holdouts.yaml
@@ -20,7 +20,7 @@ graph_data:
     # node_separator: str = "\t"
     sources_column: 'subject'
     destinations_column: 'object'
-    # edge_types_column: 'weight'  # fix this
+    edge_types_column: 'edge_label'
     default_edge_type: 'biolink:related_to'
     ignore_duplicated_edges: True
     node_path: tests/resources/test_graphs/pos_train_nodes.tsv
