--- a/tests/resources/test_good_upload_info.yaml
+++ b/tests/resources/test_good_upload_info.yaml
@@ -35,3 +35,5 @@ output_directory: tests/resources/test_output_data_dir/
 upload:
   s3_bucket: some_bucket
   s3_bucket_dir: some/remote/directory/
+  extra_args:
+    'ACL': 'public-read'
