--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install cmake
           pip install git+https://github.com/monarch-initiative/embiggen.git@develop -U
           pip install .
           pip install pytest
