--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install cmake
-          pip install git+https://github.com/monarch-initiative/embiggen.git@develop -U
+          # pip install git+https://github.com/monarch-initiative/embiggen.git@develop -U
+          pip install git+https://github.com/monarch-initiative/embiggen.git@c2a81bad4c95d8577e1763a08fc6e679af02a645 -U
           pip install .
           pip install pytest
           pip install --upgrade pytest
